tests/baselines/reference/regexp-source-char-no-paragraph-separator.errors.txt
regexp-source-char-no-paragraph-separator.ts(28,1): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
regexp-source-char-no-paragraph-separator.ts(28,2): error TS1161: Unterminated regular expression literal.
regexp-source-char-no-paragraph-separator.ts(30,2): error TS1109: Expression expected.


==== regexp-source-char-no-paragraph-separator.ts (3 errors) ====
    // Copyright 2009 the Sputnik authors.  All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-RegularExpressionNonTerminator
    info: |
      RegularExpressionBody ::
        RegularExpressionFirstChar RegularExpressionChars
    
      RegularExpressionChars ::
        [empty]
        RegularExpressionChars RegularExpressionChar
    
      RegularExpressionFirstChar ::
        RegularExpressionNonTerminator but not one of * or \ or / or [
    
      RegularExpressionNonTerminator ::
        SourceCharacter but not LineTerminator
    
    description: >
      A regular expression may not contain a <PS> as a SourceCharacter
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    /a\\  /
    ~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
     
!!! error TS1161: Unterminated regular expression literal.
    
    /*
     
!!! error TS1109: Expression expected.
    There is a <PS> between "a\\ " and "/"
    */
    